# halo2-lib

halo2-base/: Cargo.toml
halo2-base/src/: lib.rs  utils.rs
halo2-base/src/gates/: flex_gate.rs  range.rs
halo2-base/src/gates/tests/: bitwise_rotate.rs  general.rs  idx_to_indicator.rs  neg_prop.rs  utils.rs
halo2-ecc/: Cargo.toml
hashes/poseidon/: Cargo.toml
hashes/poseidon/src/: lib.rs
hashes/zkevm-keccak/: Cargo.toml
