[package]
name = "halo2-base"
version = "0.3.0"
edition = "2021"

[dependencies]
itertools = "=0.10"
num-bigint = { version = "=0.4", features = ["rand"] }
num-integer = "=0.1"
num-traits = "=0.2"
rand_chacha = "=0.3"
rustc-hash = "=1.1"
ff = "=0.12"
rayon = "=1.7"
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
log = "=0.4"

# Use PSE halo2 and halo2curves for compatibility when feature = "halo2-pse" is on
halo2_proofs = { git="https://github.com/span14/halo2", package="halo2_proofs", branch="benchmark", features = ["zkml"], optional = true}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }

# plotting circuit layout
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

# test-utils
rand = { version = "0.8", optional = true }

[dev-dependencies]
ark-std = { version = "=0.3.0", default-features = false}
rand = "=0.8"
pprof = { version = "=0.11", features = ["criterion", "flamegraph"] }
criterion = "=0.4"
criterion-macro = "=0.4"
test-case = "=3.1.0"
proptest = "=1.1.0"

# memory allocation
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "=0.5", optional = true }

mimalloc = { version = "=0.1", default-features = false, optional = true }

[features]
default = ["halo2-pse", "display"]
dev-graph = ["halo2_proofs?/dev-graph", "plotters"]
halo2-pse = ["halo2_proofs"]
display = []
test-utils = ["dep:rand"]
print-trace=["ark-std/print-trace", "halo2_proofs?/print-trace"]
stats=["halo2_proofs?/stats"]

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "inner_product"
harness = false
